--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "pantheon-systems/drupal-integrations": "^10",
         "cweagans/composer-patches": "^1.7",
         "drush/drush": "^11 || ^12",
-        "drupal/bootstrap_barrio": "^5.5"
+        "drupal/bootstrap_barrio": "^5.5",
+        "drupal/menu_item_extras": "^3.0"
     },
     "require-dev": {
         "drupal/core-dev": "^10"
