--- a/config/block.block.orchard_bootstrap_main_menu.yml
+++ b/config/block.block.orchard_bootstrap_main_menu.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: wgrK2vUQ1Tx93G0DKMryoEkhISOptVrtcBwE7mQqoTA
 id: orchard_bootstrap_main_menu
 theme: orchard_bootstrap
-region: primary_menu
-weight: -6
+region: header
+weight: -3
 provider: null
 plugin: 'system_menu_block:main'
 settings:
