--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "cweagans/composer-patches": "^1.7",
         "drush/drush": "^11 || ^12",
         "drupal/bootstrap_barrio": "^5.5",
-        "drupal/menu_item_extras": "^3.0"
+        "drupal/menu_item_extras": "^3.0",
+        "drupal/admin_toolbar": "^3.5"
     },
     "require-dev": {
         "drupal/core-dev": "^10"
