--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -1,6 +1,7 @@
 _core:
   default_config_hash: 4GIX5Esnc_umpXUBj4IIocRX7Mt5fPhm4AgXfE3E56E
 module:
+  admin_toolbar: 0
   announcements_feed: 0
   automated_cron: 0
   big_pipe: 0
@@ -33,6 +34,7 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
+  product_day: 0
   search: 0
   shortcut: 0
   system: 0
